# timesolv-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/timesolv_api/: timesolv_api.py
