# [build-system]
# requires = ["hatchling >= 1.26"]
# build-backend = "hatchling.build"

[project]
name = "timesolv_api"
version = "1.0.0"
authors = [{name="Alexandra Hernandez", email="alexavndrarh@gmail.com"}]
description = "Package to be utilized for interacting with the TimeSolv API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.25.1"]
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/alexandrarh/timesolv-python"
Issues = "https://github.com/alexandrarh/timesolv-python/issues"